Load-Balancer.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: my-gc-app
  name: my-gc-app
spec:
  ports:
    - nodePort: 30945
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: my-gc-app
  type: LoadBalancer
