Nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-gc-app
spec:
  ports:
    - nodePort: 31280
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: my-gc-app
  type: NodePort
